--- a/config.json
+++ b/config.json
@@ -1,5 +1,21 @@
 {
   "train": {
+
+    "train_batch_size":16,
+    "gradient_accumulate_every": 1,
+    "train_lr": 0.0001,
+    "train_num_steps": 100000,
+    "ema_update_every": 10,
+    "ema_decay": 0.995,
+    "adam_betas": [0.9, 0.99],
+    "results_folder ": "results",
+    "cfg_path": "config.json",
+    "split_batches": true,
+    "fp16" : false,
+    "amp" : false,
+    "num_samples" : 9,
+    "save_and_sample_every":1000,
+    "results_folder": "results",
     "log_interval": 200,
     "eval_interval": 800,
     "seed": 1234,
@@ -25,7 +41,7 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "filelists/train.txt",
+    "training_files": "dataset",
     "validation_files": "filelists/val.txt",
     "max_wav_value": 32768.0,
     "sampling_rate": 44100,
@@ -94,11 +110,6 @@
     "kernel_size": 3,
     "p_dropout": 0.1,
     "resblock": "1",
-    "resblock_kernel_sizes": [3,7,11],
-    "resblock_dilation_sizes": [[1,3,5], [1,3,5], [1,3,5]],
-    "upsample_rates": [ 8, 8, 2, 2, 2],
-    "upsample_initial_channel": 512,
-    "upsample_kernel_sizes": [16,16, 4, 4, 4],
     "n_layers_q": 3,
     "use_spectral_norm": false,
     "gin_channels": 256,
