--- a/config.json
+++ b/config.json
@@ -43,14 +43,9 @@
   "data": {
     "training_files": "dataset",
     "validation_files": "filelists/val.txt",
-    "max_wav_value": 32768.0,
-    "sampling_rate": 44100,
+    "sampling_rate": 24000,
     "filter_length": 2048,
-    "hop_length": 512,
-    "win_length": 2048,
-    "n_mel_channels": 80,
-    "mel_fmin": 0.0,
-    "mel_fmax": 22050
+    "hop_length": 320
   },
   "phoneme_encoder":{
     "in_channels":256,
