--- a/config.json
+++ b/config.json
@@ -4,17 +4,20 @@
     "train_batch_size":1,
     "gradient_accumulate_every": 1,
     "train_lr": 0.0001,
-    "train_num_steps": 100000,
+    "train_num_steps": 1000000,
     "ema_update_every": 10,
     "ema_decay": 0.995,
     "adam_betas": [0.9, 0.99],
     "results_folder ": "results",
     "cfg_path": "config.json",
     "split_batches": true,
-    "fp16" : false,
+    "fp16" : true,
     "amp" : false,
     "num_samples" : 1,
     "save_and_sample_every":1000,
+    "timesteps":1000,
+    "sampling_timesteps":250,
+    "use_ddim":true,
     "results_folder": "results",
     "log_interval": 200,
     "eval_interval": 800,
@@ -30,14 +33,8 @@
     "batch_size": 6,
     "fp16_run": false,
     "lr_decay": 0.999875,
-    "segment_size": 10240,
     "init_lr_ratio": 1,
     "warmup_epochs": 0,
-    "c_mel": 45,
-    "c_kl": 1.0,
-    "use_sr": true,
-    "max_speclen": 512,
-    "port": "8001",
     "keep_ckpts": 3,
     "all_in_mem": false
   },
