--- a/config.json
+++ b/config.json
@@ -40,7 +40,7 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "vctk",
+    "training_files": "vctk/44k/p233",
     "validation_files": "filelists/val.txt",
     "sampling_rate": 24000,
     "filter_length": 2048,
