--- a/config.json
+++ b/config.json
@@ -40,7 +40,7 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "vctk",
+    "training_files": "dataset",
     "validation_files": "filelists/val.txt",
     "sampling_rate": 24000,
     "filter_length": 2048,
@@ -50,7 +50,7 @@
     "in_channels":256,
     "out_channels":512,
     "hidden_channels":512,
-    "kernel_size":9,
+    "kernel_size":3,
     "n_layers":6,
     "gin_channels":256,
     "filter_channels":2048,
