--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
     "adam_betas": [0.9, 0.99],
     "save_and_sample_every":1000,
     "timesteps":1000,
-    "sampling_timesteps":250,
+    "sampling_timesteps":1000,
     "logs_folder" : "logs",
     "seed": 1234,
     "epochs": 10000,
@@ -24,7 +24,7 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "dataset",
+    "training_files": "dataset_processed",
     "sampling_rate": 24000,
     "hop_length": 320
   },
