--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
     "save_and_sample_every":1000,
     "timesteps":1000,
     "sampling_timesteps":1000,
-    "logs_folder" : "logs",
+    "logs_folder" : "logs/tts",
     "seed": 1234,
     "epochs": 10000,
     "betas": [
