--- a/config.json
+++ b/config.json
@@ -24,83 +24,55 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "dataset_processed",
+    "training_files": "vctk_tts_processed",
     "sampling_rate": 24000,
     "hop_length": 320
   },
   "phoneme_encoder":{
-    "in_channels":512,
     "out_channels":512,
     "hidden_channels":512,
-    "kernel_size":7,
+    "kernel_size":5,
     "n_layers":6,
-    "gin_channels":256,
     "filter_channels":2048,
     "n_heads":8,
-    "p_dropout":0.2,
-    "cond": true
+    "p_dropout":0.2
   },
   "f0_predictor":
   {
     "in_channels":512,
     "hidden_channels":512,
     "out_channels":1,
-    "conv1d_layers":3,
     "attention_layers":10,
     "n_heads":8,
-    "p_dropout":0.5,
-    "proximal_bias":false,
-    "proximal_init":true
+    "p_dropout":0.5
   },
   "duration_predictor":{
     "in_channels":512,
     "hidden_channels":512,
     "out_channels":1,
-    "conv1d_layers":3,
     "attention_layers":10,
     "n_heads":8,
-    "p_dropout":0.5,
-    "proximal_bias":false,
-    "proximal_init":true
+    "p_dropout":0.5
   },
   "prompt_encoder":{
     "in_channels":128,
     "out_channels":512,
     "hidden_channels":512,
-    "kernel_size":9,
+    "kernel_size":5,
     "n_layers":6,
     "filter_channels":2048,
     "n_heads":8,
-    "p_dropout": 0.2,
-    "cond": false
+    "p_dropout": 0.2
   },
   "diffusion_encoder":{
     "in_channels":128,
-    "cond_channels":512,
     "out_channels":128,
     "hidden_channels":512,
-    "kernel_size":5,
-    "dilation_rate":1,
+    "kernel_size":3,
+    "dilation_rate":2,
     "n_layers":40,
     "n_heads":8,
-    "proximal_bias":false,
-    "proximal_init":true,
     "p_dropout":0.2,
-    "dim_time_mult":4,
-    "scale":16
-  },
-  "model": {
-    "inter_channels": 192,
-    "hidden_channels": 192,
-    "filter_channels": 768,
-    "n_heads": 2,
-    "n_layers": 6,
-    "kernel_size": 3,
-    "p_dropout": 0.1,
-    "resblock": "1",
-    "n_layers_q": 3,
-    "use_spectral_norm": false,
-    "gin_channels": 256,
-    "ssl_dim": 256
+    "dim_time_mult":4
   }
 }
