--- a/config.json
+++ b/config.json
@@ -24,7 +24,7 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "dataset",
+    "training_files": "dataset_processed",
     "sampling_rate": 24000,
     "hop_length": 320,
     "language" : "en"
@@ -69,8 +69,8 @@
     "in_channels":128,
     "out_channels":128,
     "hidden_channels":512,
-    "kernel_size":3,
-    "dilation_rate":2,
+    "kernel_size":5,
+    "dilation_rate":1,
     "n_layers":40,
     "n_heads":8,
     "p_dropout":0.2,
