--- a/config.json
+++ b/config.json
@@ -26,45 +26,38 @@
     "all_in_mem": false
   },
   "data": {
-    "training_files": "/home/hyc/vctk_tts_processed_processed",
-    "val_files": "/home/hyc/val_dataset",
+    "training_files": "small_test_dataset",
+    "val_files": "small_test_dataset",
     "sampling_rate": 24000,
     "hop_length": 256
   },
   "phoneme_encoder":{
     "in_channels":256,
-    "hidden_channels":512,
+    "hidden_channels":256,
+    "out_channels":256,
     "n_layers":6,
     "p_dropout":0.2
   },
   "f0_predictor":
   {
     "in_channels":256,
-    "hidden_channels":512,
+    "hidden_channels":256,
     "out_channels":1,
-    "attention_layers":10,
-    "n_heads":8,
-    "p_dropout":0.5
-  },
-  "prosody_predictor":
-  {
-    "in_channels":256,
-    "hidden_channels":512,
-    "out_channels":512,
     "attention_layers":10,
     "n_heads":8,
     "p_dropout":0.5
   },
   "prompt_encoder":{
     "in_channels":100,
-    "hidden_channels":512,
+    "hidden_channels":256,
+    "out_channels":256,
     "n_layers":6,
     "p_dropout":0.2
   },
   "diffusion_encoder":{
     "in_channels":100,
     "out_channels":100,
-    "hidden_channels":512,
+    "hidden_channels":256,
     "kernel_size":5,
     "dilation_rate":1,
     "n_layers":40,
